@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.865 2007-11-15 17:33:33 castaglia Exp $
+$Id: NEWS,v 1.866 2007-11-16 03:16:48 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -59,6 +59,8 @@ CVS
   directive.
 - Bug 3006 - 'ScanOnLogin' QuotaOption may try to update a nonexistent tally
   record.
+- Bug 3001 - Incomplete downloads not logged properly in TransferLog if
+  sendfile is used.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
